--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -27,7 +27,9 @@ Calculating the total number of steps taken each day.
 ```{r, echo= TRUE}
 sum1 <- aggregate(data$steps~data$date,FUN=sum,)
 colnames(sum1) <- c("date","steps")
+png("plot1.png", width=480, height=480)
 hist(sum1$steps, col= "red",xlab= "steps", main= "Total steps taken in a day")
+dev.off()
 ```
 
 mean and median of the number of steps taken each day.
@@ -46,9 +48,11 @@ creating the intervals for average number of steps taken.
 library(plyr)
 library(ggplot2)
 interval_data <- ddply(clean_data, .(interval), summarize, avg = mean(steps))
+png("plot2.png", width=480, height=480)
 g <- ggplot(interval_data, aes(x=interval, y= avg), xlab= "interval", ylab= "
 average number of steps")
 g+geom_line()+ggtitle("Average number of steps per interval")
+dev.off()
 ```
 
 Maximum number of steps per interval.
@@ -68,9 +72,11 @@ imputed_data <- transform(data, steps = ifelse(is.na(data$steps), steps_by_inter
 Histogram to show the difference
 ```{r, echo= TRUE}
 steps_by_day_i <- aggregate(steps ~ date, imputed_data, sum)
+png("plot3.png", width=480, height=480)
 hist(steps_by_day_i$steps, main = paste("Total Steps Each Day"), col="blue", xlab="Number of Steps")
 hist(sum1$steps, main = paste("Total Steps Each Day"), col="red", xlab="Number of Steps", add=T)
 legend("topright", c("Imputed", "Non-imputed"), col=c("blue", "red"), lwd=10)
+dev.off()
 ```
 
 Calculating mean and median
@@ -96,8 +102,9 @@ weekdays <- c("Monday", "Tuesday", "Wednesday", "Thursday",
 imputed_data$dow = as.factor(ifelse(is.element(weekdays(as.Date(imputed_data$date)),weekdays), "Weekday", "Weekend"))
 steps_by_interval_i <- aggregate(steps ~ interval + dow, imputed_data, mean)
 library(lattice)
-
+png("plot4.png", width=480, height=480)
 xyplot(steps_by_interval_i$steps ~ steps_by_interval_i$interval|steps_by_interval_i$dow, main="Average Steps per Day by Interval",xlab="Interval", ylab="Steps",layout=c(1,2), type="l")
+dev.off()
 ```
 
 
