--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -27,9 +27,7 @@ Calculating the total number of steps taken each day.
 ```{r, echo= TRUE}
 sum1 <- aggregate(data$steps~data$date,FUN=sum,)
 colnames(sum1) <- c("date","steps")
-png("plot1.png", width=480, height=480)
 hist(sum1$steps, col= "red",xlab= "steps", main= "Total steps taken in a day")
-dev.off()
 ```
 
 mean and median of the number of steps taken each day.
@@ -37,9 +35,10 @@ mean and median of the number of steps taken each day.
 ```{r, echo= TRUE}
 mean1 <- mean(sum1$steps)
 median1 <-median(sum1$steps)
-mean1
-median1
-```
+````
+the mean of the steps is 10766.19
+the median of the steps is 10765
+
 
 time series plot of the average number of steps taken.
 creating the intervals for average number of steps taken.
@@ -48,11 +47,9 @@ creating the intervals for average number of steps taken.
 library(plyr)
 library(ggplot2)
 interval_data <- ddply(clean_data, .(interval), summarize, avg = mean(steps))
-png("plot2.png", width=480, height=480)
 g <- ggplot(interval_data, aes(x=interval, y= avg), xlab= "interval", ylab= "
 average number of steps")
 g+geom_line()+ggtitle("Average number of steps per interval")
-dev.off()
 ```
 
 Maximum number of steps per interval.
@@ -60,6 +57,7 @@ Maximum number of steps per interval.
 maximum <- max(interval_data$avg)
 interval_data[interval_data$avg==maximum,1]
 ```
+the interval with maximum  number of steps is 835  
 
 Code to describe and show a strategy for imputing missing data.
 
@@ -72,27 +70,26 @@ imputed_data <- transform(data, steps = ifelse(is.na(data$steps), steps_by_inter
 Histogram to show the difference
 ```{r, echo= TRUE}
 steps_by_day_i <- aggregate(steps ~ date, imputed_data, sum)
-png("plot3.png", width=480, height=480)
 hist(steps_by_day_i$steps, main = paste("Total Steps Each Day"), col="blue", xlab="Number of Steps")
 hist(sum1$steps, main = paste("Total Steps Each Day"), col="red", xlab="Number of Steps", add=T)
 legend("topright", c("Imputed", "Non-imputed"), col=c("blue", "red"), lwd=10)
-dev.off()
 ```
 
 Calculating mean and median
 ```{r, echo= TRUE}
 mean2 <- mean(steps_by_day_i$steps)
 median2 <- median(steps_by_day_i$steps)
-mean2
-median2
-```
-
-Check the difference 
-```{r, echo= TRUE}
 mean2 - mean1
 median2 - median1
 sum(steps_by_day_i$steps) - sum(sum1$steps)
 ```
+the mean of the steps is 10766.19  
+the median of the steps is 10766.19  
+
+Check the difference   
+the difference between the means is 0  
+the difference between the medians is 1.188679  
+the total difference between the steps is 86129.51  
 
 Activity patterns in weekdays and weekends
 
@@ -102,9 +99,9 @@ weekdays <- c("Monday", "Tuesday", "Wednesday", "Thursday",
 imputed_data$dow = as.factor(ifelse(is.element(weekdays(as.Date(imputed_data$date)),weekdays), "Weekday", "Weekend"))
 steps_by_interval_i <- aggregate(steps ~ interval + dow, imputed_data, mean)
 library(lattice)
-png("plot4.png", width=480, height=480)
+
 xyplot(steps_by_interval_i$steps ~ steps_by_interval_i$interval|steps_by_interval_i$dow, main="Average Steps per Day by Interval",xlab="Interval", ylab="Steps",layout=c(1,2), type="l")
-dev.off()
+
 ```
 
 
